# RoadConditionAnalyzer

./: .gitignore  Makefile  README.md  SETUP_GUIDE.md  docker-compose.yml  frontend.Dockerfile  index.html  package.json  start.bat  start.sh  verify.sh  worker.Dockerfile
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  celery_app.py  config.py
env/: backend.env  frontend.env  minio.env  postgres.env  worker.env
nginx/: nginx.conf
src/: App.tsx
src/components/: DetectionResults.tsx  GPSInput.tsx  ProcessingProgress.tsx  ReportActions.tsx  VideoUpload.tsx
src/types/: index.ts
src/utils/: mockCV.ts  reportGenerator.ts
