[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roadcondition-backend"
version = "0.1.0"
description = "FastAPI backend services for the RoadConditionAnalyzer stack"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.1.0",
  "python-dotenv>=1.0.0",
  "celery>=5.3.0",
  "redis>=5.0.1",
  "psycopg[binary]>=3.1.10",
  "minio>=7.2.7"
]

[project.optional-dependencies]
dev = ["ruff>=0.5.0", "pytest>=8.0.0", "httpx>=0.26.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
